<resources>
    <string name="app_name">PoE Trends</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PoE Trends</string>
    <string name="nav_header_subtitle">Data source: poe.ninja</string>
    <string name="nav_header_desc">Path of Exile Economy Tracker</string>
    <string name="action_change_league">Change League&#8230;</string>

    <string name="menu_loading">Loading&#8230;</string>

    <string name="menu_currency">Currency</string>
    <string name="menu_fragments">Fragments</string>
    <string name="menu_delirium_orbs">Delirium Orbs</string>
    <string name="menu_watchstones">Watchstones</string>
    <string name="menu_oils">Oils</string>
    <string name="menu_incubators">Incubators</string>
    <string name="menu_scarabs">Scarabs</string>
    <string name="menu_fossils">Fossils</string>
    <string name="menu_resonators">Resonators</string>
    <string name="menu_essences">Essences</string>
    <string name="menu_divination_cards">Divination Cards</string>
    <string name="menu_prophecies">Prophecies</string>
    <string name="menu_skill_gems">Skill Gems</string>
    <string name="menu_base_types">Base Types</string>
    <string name="menu_helmet_enchant">Helmet Enchantments</string>
    <string name="menu_unique_maps">Unique Maps</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_unique_jewels">Unique Jewels</string>
    <string name="menu_unique_flasks">Unique Flasks</string>
    <string name="menu_unique_weapons">Unique Weapons</string>
    <string name="menu_unique_armours">Unique Armours</string>
    <string name="menu_unique_accessories">Unique Accessories</string>
    <string name="menu_beasts">Beasts</string>
    <string name="menu_vials">Vials</string>
    <string name="title_activity_league_selector">LeagueSelectorActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_currency_history">CurrencyHistoryActivity</string>
    <string name="title_activity_item_history">ItemHistoryActivity</string>
</resources>
